--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,23 @@
 }
 
 body {
+    margin: 25px 0;
     font-family: 'Fredoka', sans-serif;
+}
+
+.clearfix {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+header .header-container  {
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+header .header-container h1 {
+    color: #e53170;
+    padding-bottom: 1.5em;
 }
