--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Utilities */
 * {
     margin: 0;
     padding: 0;
@@ -17,19 +18,18 @@ body {
     clear: both;
 }
 
-.tw {
-    color: white;
-}
-
 a {
     text-decoration: none;
     color: #56c9dd;
     display: block;
 }
 
+.tw {
+    color: white;
+}
 /* /Utilities */
 
-
+/* Header */
 header .header-container {
     margin-top: 30px;
     text-align: center;
@@ -40,9 +40,9 @@ header .header-container h1 {
     color: #e53170;
     padding-bottom: 1.5em;
 }
-
 /* /Header */
 
+/* Main */
 .col {
     width: 400px;
     height: 100px;
@@ -67,3 +67,4 @@ a {
 }
 
 .col-1 {}
+/* /Main */
